--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "jspm": {
-    "dependencies": {
-      "jquery": "npm:jquery@^2.2.0",
-      "react": "npm:react@^0.14.7",
-      "react-dom": "npm:react-dom@^0.14.7"
-    }
-  },
-  "devDependencies": {
-    "jspm": "^0.16.33"
-  }
+	"jspm": {
+		"dependencies": {
+			"jquery": "npm:jquery@^2.2.0",
+			"react": "npm:react@^0.14.7",
+			"react-dom": "npm:react-dom@^0.14.7"
+		}
+	},
+	"devDependencies": {
+		"husky": "^1.0.0-rc.13",
+		"jspm": "^0.16.33",
+		"lint-staged": "^7.2.0",
+		"prettier": "^1.13.7"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{css,less,scss,js,ts,tsx,json}": [
+			"prettier --write",
+			"git add"
+		]
+	}
 }
