--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-	"jspm": {
-		"dependencies": {
-			"jquery": "npm:jquery@^2.2.0",
-			"react": "npm:react@^0.14.7",
-			"react-dom": "npm:react-dom@^0.14.7"
-		}
-	},
-	"devDependencies": {
+	"dependencies": {
+		"@types/jquery": "^3.3.4",
+		"@types/react": "^16.4.6",
+		"@types/react-dom": "^16.0.6",
+		"bootstrap": "3",
 		"husky": "^1.0.0-rc.13",
+		"jquery": "^3.3.1",
 		"jspm": "^0.16.33",
+		"jsxgraph": "^0.99.7",
 		"lint-staged": "^7.2.0",
-		"prettier": "^1.13.7"
+		"parcel": "^1.9.6",
+		"popper.js": "^1.14.3",
+		"prettier": "^1.13.7",
+		"react": "^16.4.1",
+		"react-dom": "^16.4.1",
+		"tslib": "^1.9.3",
+		"typescript": "^3.0.0-rc"
+	},
+	"scripts": {
+		"dev": "parcel index.html",
+		"build": "parcel build index.html --public-url . && cp screenshot.png dist/"
 	},
 	"husky": {
 		"hooks": {
